# creator-agent-toolbox

./: .gitignore  BETA_CHECKLIST.md  DEPLOY.md  README.md  docker-compose.yml  fix_config.py  verify_script.js  verify_script2.js  verify_test.spec.ts
archives/generator-attempt/: .gitignore  HANDOFF.md  README.md  railway.toml  render.yaml
archives/generator-attempt/backend/: Dockerfile  render.yaml
archives/generator-attempt/frontend/: package-lock.json
backend/: .env.example  Dockerfile  alembic.ini  build.sh  pyproject.toml  requirements.txt
backend/.venv-build/: pyvenv.cfg
backend/.venv-build/Scripts/: activate  activate.bat
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: main.py
backend/app/agents/: __init__.py  ab_test_orchestrator.py  trend_analyst.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  workflows.py
backend/app/core/: auth.py  config.py  logger.py
backend/app/models/: database.py
backend/app/orchestration/: workflow.py
backend/app/services/: analytics_mock.py  perplexity_client.py  youtube_client.py
backend/scripts/: verify_local.py
backend/tests/: test_workflow.py
frontend/: .env.production  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: ABTestWaiting.tsx  DashboardEmpty.tsx  ErrorFallback.tsx  Layout.tsx  ReviewSkeleton.tsx  ThumbnailSkeleton.tsx  (+1 more)
generator-attempt/backend/: .env.example  README.md  requirements.txt
generator-attempt/frontend/: package.json
scripts/: deploy.sh
(+45 files in other folders)
